--- a/css/index.css
+++ b/css/index.css
@@ -31,39 +31,35 @@ body {
 
 .hero {
     display: flex;
-    flex: auto;
     justify-content: center;
     align-items: center;
     font-family: "Roboto Bold", sans-serif;
 }
 
 .hero >.header-logo {
-    flex: 8 1 300px;
+    flex: 4 1 auto;
     text-align: left;
-    padding: 10px;
+    margin-right: auto;
     font-family: "Roboto Bold", sans-serif;
     font-size: 24px;
 }
 
-.hero>.header-link-one {
-    flex: 1 1 100px;
+.hero > .header-links {
+    flex: auto;
     text-align: center;
+    margin-left: auto;
     padding: 10px;
     font-family: "Roboto", sans-serif;
     font-size: 18px;
+    display: flex;
 }
 
-.hero>.header-link-two {
+.header-links > .header-link-one,
+.header-links > .header-link-two,
+.header-links > .header-link-three {
     flex: 1 1 100px;
     text-align: center;
-    padding: 10px;
-    font-family: "Roboto", sans-serif;
-    font-size: 18px;
-}
-
-.hero>.header-link-three {
-    flex: 1 1 100px;
-    text-align: center;
+    margin-left: auto;
     padding: 10px;
     font-family: "Roboto", sans-serif;
     font-size: 18px;
@@ -72,60 +68,47 @@ body {
 .main-body {
     display: flex;
     padding-top: 100px;
-}
-
-.main-body {
-    flex: 1;
     justify-content: space-around;
     align-items: center;
-
     gap: 100px ;
-
     padding-bottom: 150px;
+    flex-wrap:wrap-reverse;
 }
 
-.hero-text>.hero-main-text {
+.hero-text {
+    flex: 1;
+}
+
+.hero-text > .hero-main-text {
     font-size: 48px;
     font-family: "Roboto Bold", sans-serif;
     color: #F9FAF8;
+    word-wrap: break-word;
 }
 
-.hero-text>.hero-secondary-text {
+.hero-text > .hero-secondary-text {
     font-size: 18px;
     color: #E5E7EB;
 }
 
-.sign-up-button {
-    flex: 0 0 100px;
-    background-color: #3882F6;
-    width: 130px;
-    height: 35px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: background-color 0.3s ease;
-    border-radius: 10px;
-}
-
-.sign-up-button:hover {
-    cursor: pointer;
-
-    background-color: #2d67c5;
+.hero-secondary-text > a {
+    color: #8fa7d7;
+    text-decoration: none;
 }
 
 .main-body-image {
-    flex: 0 0 600px;
-    background-color: gray;
-    width: 600px;
-    height: 250px;
+    flex: 1;
+    width: 300px;
+    overflow: hidden;
     display: flex;
     justify-content: center;
-    align-items: center;
-    border-radius: 10px;
+    min-width: 250px;
+    border-radius: 15px;
 }
 
 .secondary-body {
     background-color: white;
+    margin-bottom: 100px;
 }
 
 .secondary-body > .information-header {
@@ -138,40 +121,48 @@ body {
 
 .info-cards {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
-
+    flex-direction: row;
 }
 
 .info-cards > .info-card-1,
 .info-cards > .info-card-2,
-.info-cards > .info-card-3,
-.info-cards > .info-card-4 {
-    flex: 0 0 200px;
-    width: 200px;
-    height: 200px;
-    border: 5px Solid #3882F6;
-    border-radius: 20px;
-}
-
-.info-cards-subtitle {
+.info-cards > .info-card-3 {
+    flex: 0;
     display: flex;
-
-}
-
-.info-cards-subtitle > .info-card-subtitle-1,
-.info-cards-subtitle > .info-card-subtitle-2,
-.info-cards-subtitle > .info-card-subtitle-3,
-.info-cards-subtitle > .info-card-subtitle-4 {
-    padding: 10px 40px 125px 40px;
-    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     font-size: 18px;
     text-align: center;
     color: #1F2937;
+    min-width: 250px;
+    max-width: 250px;
+    border-radius: 20px;
+    margin: 10px;
+
+}
+
+.info-card-1 > .info-card-img-1,
+.info-card-2 > .info-card-img-2,
+.info-card-3 > .info-card-img-3 {
+    flex: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    border: 5px Solid #3882F6;
+}
+.info-card-1 > .info-card-subtitle-1,
+.info-card-2 > .info-card-subtitle-2,
+.info-card-3 > .info-card-subtitle-3 {
+    flex: 0 0 auto;
+    padding: 20px 10px;
 }
 
 .quote-body {
     background-color: #E5E7EB;
-    padding: 100px 0px;
+    padding: 70px 0px;
 }
 
 .quote-body > .quote-container {
@@ -185,7 +176,7 @@ body {
     color: #1F2937;
     font-family: "Roboto Light Italic",sans-serif;
     font-size: 36px;
-    text-align: left;
+    text-align: center;
     padding: 20px 0px;
 }
 
@@ -203,50 +194,53 @@ body {
     padding: 100px 0px;
 }
 
-.third-body > .call-to-action-card-container {
+.third-body > .reach-out-card-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.call-to-action-card-container > .call-to-action-card {
+.reach-out-card-container > .reach-out-card {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     background-color: #3882F6;
     border-radius: 10px;
-    padding: 40px 60px;
-    width: 750px;
-    height: 50px;
-
+    padding: 20px 30px;
     gap: 50px;
 }
 
-.call-to-action-card > .call-to-action-card-text {
-    flex: 2;
+.reach-out-card > .reach-out-card-text {
+    flex: 1;
     display: flex;
     flex-direction: column;
 }
 
-.call-to-action-card-text > .call-to-action-card-text-1,
-.call-to-action-card-text > .call-to-action-card-text-2 {
+.reach-out-card-text > .reach-out-card-text-1,
+.reach-out-card-text > .reach-out-card-text-2 {
     flex: 1;
-    white-space: nowrap;
+    
 }
 
-.call-to-action-card-text > .call-to-action-card-text-1{
+.reach-out-card-text > .reach-out-card-text-1{
     font-family: "Roboto Bold",sans-serif;
     font-size: 24px;
     color: #E5E7EB;
+    min-width: 260px;
 }
 
-.call-to-action-card-text > .call-to-action-card-text-2{
+.reach-out-card-text > .reach-out-card-text-2{
     font-size: 18px;
     color: #E5E7EB;
 }
 
-.call-to-action-card > .call-to-action-card-sign-up-button {
+.reach-out-card-discord-button {
+    text-decoration: none;
+}
+
+.reach-out-card > .reach-out-card-discord-button {
     flex: 0 0 150px;
     width: 150px;
     height: 35px;
@@ -259,7 +253,7 @@ body {
     color: #E5E7EB;
 }
 
-.call-to-action-card-sign-up-button:hover {
+.reach-out-card-discord-button:hover {
     cursor: pointer;
     border: 3px solid #bcbcbc;
 }
