Modify index.html and index.css "work in progress"

--- a/css/index.css
+++ b/css/index.css
@@ -166,6 +166,10 @@ body {
     padding: 70px 0px;
 }
 
+.quote-body>a {
+    text-decoration: none;
+}
+
 .quote-body>.quote-container {
     display: flex;
     justify-content: center;
