--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,10 @@
     src: url(../Fonts/work-Sans/WorkSans-LightItalic.ttf);
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: "Work-Sans","Roboto", sans-serif;
     margin: 0;
@@ -121,14 +125,13 @@ a {
 
 .main-body-image {
     flex: 1;
-    width: 300px;
+    /*width: 300px;*/
     overflow: hidden;
     display: flex;
     justify-content: center;
     min-width: 250px;
     border-radius: 15px;
     align-self: flex-start;
-    padding-bottom: 10px;
 }
 
 .secondary-body {
