--- a/css/index.css
+++ b/css/index.css
@@ -33,7 +33,7 @@ html {
 }
 
 body {
-    font-family: "Work-Sans","Roboto", sans-serif;
+    font-family: "Work-Sans", "Roboto", sans-serif;
     margin: 0;
 }
 
@@ -78,7 +78,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: "Work-Sans Bold","Roboto Bold", sans-serif;
+    font-family: "Work-Sans Bold", "Roboto Bold", sans-serif;
 }
 
 .hero>.header-logo {
@@ -88,7 +88,7 @@ body {
     justify-content: left;
     align-items: center;
     margin-right: auto;
-/*  font-family: "Work-Sans Bold", "Roboto Bold", sans-serif;
+    /*  font-family: "Work-Sans Bold", "Roboto Bold", sans-serif;
     font-size: 24px;*/
 }
 
@@ -123,7 +123,7 @@ body {
     padding-top: 100px;
     justify-content: space-around;
     align-items: center;
-    gap: 100px;
+    gap: 1rem;
     padding-bottom: 150px;
     flex-wrap: wrap-reverse;
 }
@@ -145,16 +145,20 @@ body {
     color: #E5E7EB;
 }
 
-.main-body-image {
+.main-body-image-holder {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+}
+
+.main-body-image-holder>.main-body-image {
     flex: 1;
     width: 300px;
     overflow: hidden;
-    display: flex;
-    justify-content: center;
-    min-width: 250px;
-    border-radius: 15px;
     align-self: center;
+    border-radius: 15px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.40);
+    min-width: 250px;
 }
 
 .secondary-body {
@@ -191,9 +195,9 @@ body {
     color: #1F2937;
     min-width: 250px;
     max-width: 250px;
-    border-radius: 20px;
+
     margin: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.40);
+
     text-align: center;
 }
 
@@ -207,6 +211,7 @@ body {
     min-width: 240px;
     border-radius: 15px;
     align-self: flex-start;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.40);
 }
 
 .info-card-1>.info-card-subtitle-1,
@@ -283,7 +288,7 @@ body {
 .reach-out-card-text>.reach-out-card-text-1,
 .reach-out-card-text>.reach-out-card-text-2 {
     flex: 1;
-    padding-bottom: 5px; 
+    padding-bottom: 5px;
 }
 
 .reach-out-card-text>.reach-out-card-text-1 {
